; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_source_output_video.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_source_output_video.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source_frame = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_source_output_video(i32* %0, %struct.obs_source_frame* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.obs_source_frame*, align 8
  %5 = alloca %struct.obs_source_frame, align 4
  store i32* %0, i32** %3, align 8
  store %struct.obs_source_frame* %1, %struct.obs_source_frame** %4, align 8
  %6 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %7 = icmp ne %struct.obs_source_frame* %6, null
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @obs_source_output_video_internal(i32* %9, %struct.obs_source_frame* null)
  br label %29

11:                                               ; preds = %2
  %12 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %13 = bitcast %struct.obs_source_frame* %5 to i8*
  %14 = bitcast %struct.obs_source_frame* %12 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %13, i8* align 4 %14, i64 8, i1 false)
  %15 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %16 = getelementptr inbounds %struct.obs_source_frame, %struct.obs_source_frame* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @format_is_yuv(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %11
  %21 = getelementptr inbounds %struct.obs_source_frame, %struct.obs_source_frame* %5, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  br label %24

23:                                               ; preds = %11
  br label %24

24:                                               ; preds = %23, %20
  %25 = phi i32 [ %22, %20 ], [ 1, %23 ]
  %26 = getelementptr inbounds %struct.obs_source_frame, %struct.obs_source_frame* %5, i32 0, i32 0
  store i32 %25, i32* %26, align 4
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @obs_source_output_video_internal(i32* %27, %struct.obs_source_frame* %5)
  br label %29

29:                                               ; preds = %24, %8
  ret void
}

declare dso_local i32 @obs_source_output_video_internal(i32*, %struct.obs_source_frame*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i64 @format_is_yuv(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
